2005-02-21  Laurent Sansonetti  <lrz@gnome.org>

	* src/rbgst.c: Initialize Gst::Tag, do not initialize Gst::Structure.
	* src/rbgst.h: Removed helper macros for Gst::Structure.
	* src/rbgsttag.c: Added.
	* src/rbgstcaps.c: Convert Gst::Structure to Hash.
	* src/rbgstmediainfo.c: 
	  - #initialize throws Gst::MediaInfoError upon problems ;
	  - Added #set_source ;
	  - #metadata and #streaminfo now return a Hash (instead of a Gst::Structure).
	* src/rbgstplugin.c: 
	  - Added #major_version, #minor_version, #version ;
	  - Added missing documentation.
	* src/rbgststructure.c: 
	  - Deprecated Gst::Structure ;
	  - Added two functions to convert Ruby Hash to Gst::Structure and vice-versa.
	* sample/media-type.rb, sample/gst-inspect.rb: Follow these changes.

2005-02-09  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgstmediainfo.c: Added Gst::MediaInfoError.
	Raise an Gst::MediaInfoError when an error raised in 
	Gst::MediaInfo#read.
	Reported by Max Nickel.
	* src/rbgstcaps.c: Added G_DEF_SETTERS().

2005-02-09  Max Nickel <max@unmuted.de>

	* src/rbgstcaps.c: Fix a wrong argument of Gst::Caps#get_structure.

2005-02-09  Jack, Paul  <pjack@sfaf.org>

	* src/rbgsttypefindfactory.c: Added.
	* sample/gst-inspect.rb: Replaced print_caps function 
	with caps.to_s
	* src/rbgst.c: Added call to Init_gst_typefindfactory.
	* src/rbgst.h: Added RGST_TYPE_FIND_FACTORY macro
	and RGST_TYPE_FIND_FACTORY_NEW macro
	* src/rbgstpad.c: Replaced nonexistent RBGST_CAPS macro 
	with RGST_CAPS_NEW macro.
	* src/rbgstpadtemplate.c: Replaced nonexistent RBGST_CAPS 
	macro with RGST_CAPS_NEW macro.
  	* src/rbgstplugin.c: Added filename, description, package, 
	license, origin and name accessor methods.
	* src/rbgstpluginfeature.c: Added ability to instantiate 
	Gst::TypeFindFactory.
	* src/rbgsttypefindfactory.c: New file.

2005-01-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Follow mkmf-gnome2.rb changes. 

2004-08-27  Masao Mutoh  <mutoh@highway.ne.jp>
