@@ -53,12 +53,14 @@ Init_gst_classes (void)
     extern void Init_gst_pluginfeature (void);
     extern void Init_gst_querytype (void);
     extern void Init_gst_registry (void);
+    extern void Init_gst_registry_pool (void);
     extern void Init_gst_scheduler (void);
     extern void Init_gst_schedulerfactory (void);
     extern void Init_gst_systemclock (void);
     extern void Init_gst_tag (void);
+    extern void Init_gst_tag_setter (void);
     extern void Init_gst_thread (void);
-	extern void Init_gst_typefindfactory (void);
+    extern void Init_gst_typefindfactory (void);
     extern void Init_gst_xml (void);
 
 #ifdef HAVE_MEDIA_INFO
@@ -90,12 +92,14 @@ Init_gst_classes (void)
     Init_gst_pluginfeature ();
     Init_gst_querytype ();
     Init_gst_registry ();
+    Init_gst_registry_pool ();
     Init_gst_scheduler ();
     Init_gst_schedulerfactory ();
     Init_gst_systemclock ();
     Init_gst_tag ();
+    Init_gst_tag_setter ();
     Init_gst_thread ();
-	Init_gst_typefindfactory ();
+    Init_gst_typefindfactory ();
     Init_gst_xml ();
 
 #ifdef HAVE_MEDIA_INFO
