@@ -74,6 +74,7 @@ extern VALUE cGstEventSeek;
 #define RGST_REGISTRY(o)            (GST_REGISTRY(RVAL2GOBJ(o)))
 #define RGST_SCHEDULER(o)           (GST_SCHEDULER(RVAL2GOBJ(o)))
 #define RGST_SCHEDULER_FACTORY(o)   (GST_SCHEDULER_FACTORY(RVAL2GOBJ(o)))
+#define RGST_TAG_SETTER(o)          (GST_TAG_SETTER(RVAL2GOBJ(o)))
 #define RGST_THREAD(o)              (GST_THREAD(RVAL2GOBJ(o)))
 #define RGST_TYPE_FIND_FACTORY(o)   (GST_TYPE_FIND_FACTORY(RVAL2GOBJ(o)))
 #define RGST_XML(o)                 (GST_XML(RVAL2GOBJ(o)))
@@ -97,6 +98,7 @@ extern VALUE cGstEventSeek;
 #define RGST_PAD_TEMPLATE_NEW(o)        (RGST_GOBJ_NEW(GST_PAD_TEMPLATE(o)))
 #define RGST_PIPELINE_NEW(o)            (RGST_GOBJ_NEW(GST_PIPELINE(o)))
 #define RGST_PLUGIN_NEW(o)              (BOXED2RVAL(GST_PLUGIN(o), GST_TYPE_PLUGIN))
+#define RGST_PLUGIN_FEATURE_NEW(o)      (RGST_GOBJ_NEW(GST_PLUGIN_FEATURE(o)))
 #define RGST_QUERY_TYPE_NEW(o)          (BOXED2RVAL(GST_QUERY_TYPE2(o), GST_TYPE_QUERY_TYPE2))
 #define RGST_REGISTRY_NEW(o)            (RGST_GOBJ_NEW(GST_REGISTRY(o)))
 #define RGST_SCHEDULER_NEW(o)           (RGST_GOBJ_NEW(GST_SCHEDULER(o)))
